--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-
-    </div>
+    <h1>Explore your creativity</h1>
+    <div id="container"></div>
 </body>
 </html>
 <script src="app.js"></script>
